# movie_finder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLOUDFLARE_400_FIX.md  CODEDEPLOY_SETUP.md  DEPLOY_LIGHTSAIL.md  DOCKER_MOVE_TO_O.md  Dockerfile  Dockerfile.dev  GRAFANA_MONITORING.md  LICENSE  MANUAL_DEPLOY_COMMANDS.md  Makefile  PARAMETER_STORE_SETUP.md  README.md  SETUP_LIGHTSAIL_CREDENTIALS.md  TROUBLESHOOTING_CODEDEPLOY.md  appspec.yml  conftest.py  docker-compose.lightsail-direct.yml  docker-compose.lightsail-nginx.yml  docker-compose.lightsail.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  env_example  manage.py  pyproject.toml  requirements.txt  run-local-with-metrics.md
.cursor/: README.md  mcp_setup_context.md
.cursor/rules/: commit-pre-commit-and-coverage.mdc  deploy-production-manual.mdc
.cursor/skills/connect-to-lightsail-instance/: SKILL.md
.cursor/skills/pre-commit-and-tests/: SKILL.md
.cursor/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml  deploy-lightsail-codedeploy.yml  deploy-lightsail.yml
auth_app/: admin.py  apps.py  backends.py  errors.py  exceptions.py  forms.py  models.py  repositories.py  serializers.py  tests.py  views.py
auth_app/migrations/: 0001_initial.py  0002_account_tiers.py  0003_default_admin.py
auth_app/tests/: test_auth.py  test_backends.py
collection/: admin.py  curated_collections_data.py  curated_collections_seed.json  dataclasses.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
collection/migrations/: 0001_initial.py  0002_collections_subscription.py  0003_remove_collection_collection_owner_name_unique.py  0004_collection_design.py  0005_seed_curated_collections.py  0006_seed_curated_collection_movies.py
collection/tests/: __init__.py  test_admin.py  test_models.py  test_services.py  test_views.py
data/: minimal_seed.sql
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
monitoring/tempo/: tempo.yml
movie/: admin.py  ai_find_movie.py  apps.py  dataclasses.py  errors.py  filters.py  managers.py  models.py  prompts.py  repositories.py  serializers.py  services.py  system_prompts.py  tests.py  views.py
movie/migrations/: 0001_initial.py  0002_alter_movie_title.py  0003_movie_genre_movie_plot.py  0004_actor_director_genre_remove_movie_genre_movie_actors_and_more.py  0005_country_language_writer_remove_movie_director_and_more.py  0006_alter_rating_movie.py  0007_rename_released_movie_released_date.py  0008_alter_movie_awards_alter_movie_imdb_rating_and_more.py  0009_recommendedmovie.py  0010_recommendedmovie_deactivated_at_and_more.py  0011_alter_recommendedmovie_options_and_more.py  0012_topmovie.py  0013_movie_title_ua.py
movie/tests/: test_admin.py  test_ai_client.py  test_entrypoints.py  test_management_commands.py  test_repository_and_services.py  test_views.py
movie_finder/: kostil_na_env.txt  setenv.sh
movie_finder/finder/: admin.py  forms.py  models.py  views.py
movie_finder/movie_finder/: settings.py  urls.py
movie_finder_django/: .env_example  Dockerfile  asgi.py  docker-compose.yml  manage.py  metrics.py  pyproject.toml  requiremenrs.txt  requirements.txt  settings.py  tracing.py  urls.py  wsgi.py
movie_finder_django/api/: errors.py  find_movie.py  models.py  paginations.py  serializers.py  tests.py  views.py
movie_finder_django/api_auth/: backends.py  errors.py  models.py  serializers.py  tests.py  views.py
movie_finder_django/auth_app/: apps.py  errors.py  models.py  tests.py  views.py
movie_finder_django/finder/: admin.py  forms.py  models.py  serializers.py  tests.py  views.py
movie_finder_django/movie/: ai_find_movie.py  dataclasses.py  filters.py  managers.py  models.py  paginations.py  prompts.py  serializers.py  services.py  tests.py  views.py
movie_finder_django/movie_finder_django/: settings.py  urls.py  wsgi.py
movie_finder_django/throttling/: fingerprint.py  throttling.py
scripts/: check_unapplied_migrations.py  entrypoint.sh  manual_deploy.sh  run-tests-local.ps1
scripts/deploy/: after_install.sh  application_start.sh  application_stop.sh  before_install.sh  fetch-deploy-logs.sh  update-grafana-logs-dashboard-on-prod.ps1  update-grafana-logs-dashboard-on-prod.sh  validate_service.sh
scripts/deploy/nginx/: README.md  (+2 more)
throttling/: fingerprint.py  throttling.py
throttling/tests/: test_fingerprint.py  test_throttling.py
(+57 files in other folders)
