[tool.poetry]
name = "movie_finder_django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4"
annotated-types = "==0.7.0"
anthropic = "==0.68.1"
anyio = "==4.4.0"
asgiref = "==3.9.2"
certifi = "==2024.7.4"
cffi = "==2.0.0"
charset-normalizer = "==3.3.2"
cryptography = "==46.0.1"
distro = "==1.9.0"
django = "==5.2.7"
django-allauth = "==65.11.2"
django-cors-headers = "==4.9.0"
django-environ = "==0.12.0"
django-extensions = "==4.1"
django-filter = "==25.1"
djangorestframework = "==3.16.1"
djangorestframework-simplejwt = "==5.5.1"
filelock = "==3.15.4"
fsspec = "==2024.6.1"
gunicorn = "==23.0.0"
h11 = "==0.16.0"
httpcore = "==1.0.9"
httpx = "==0.28.1"
huggingface-hub = "==0.24.0"
idna = "==3.7"
iniconfig = "==2.1.0"
jiter = "==0.5.0"
packaging = "==24.1"
pluggy = "==1.5.0"
psycopg2-binary = "==2.9.10"
pycparser = "==2.22"
pydantic = "==2.8.2"
pydantic-core = "==2.20.1"
pyjwt = "==2.10.1"
python-dotenv = "==1.1.1"
pyyaml = "==6.0.3"
requests = "==2.32.5"
requests-mock = "==1.12.1"
setuptools = "==80.9.0"
sniffio = "==1.3.1"
sqlparse = "==0.5.0"
tokenizers = "==0.19.1"
tqdm = "==4.66.4"
typing-extensions = "==4.12.2"
ua-parser = "==1.0.0"
ua-parser-builtins = "==0.18.0.post1"
urllib3 = "==2.5.0"
user-agents = "==2.2.0"
uvicorn = "==0.32.0"
wheel = "==0.45.1"
pytest = "==8.4.2"
drf-spectacular = "^0.28.0"
whitenoise = "6.8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.0"
coverage = "^7.10.7"
pip = "^25.2"
pytest-django = "==4.11.1"

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "DJ"]
ignore = ["DJ008"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "movie_finder_django.settings"
pythonpath = ["."]
python_files = ["test_*.py", "*_tests.py", "tests.py"]
testpaths = ["auth_app", "movie", "collection", "throttling"]

[tool.coverage.run]
source = ["auth_app", "movie", "collection", "throttling", "movie_finder_django"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
